feat: replace region field with next_update_expected timestamp in status endpoint

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -16,12 +16,7 @@ description: 'Track all changes, updates, and new features added to the Exchange
 **Authentication**
 - Bearer token authentication
 - Australian suburb-based API key prefixes
-- Plan-based rate limiting (Free: 50/day, Starter: 1,000/day, Professional: 10,000/day, Business: unlimited)
-
-**Infrastructure**
-- Cloudflare Workers global deployment
-- D1 database for historical data
-- KV storage for caching and rate limits
+- Plan-based rate limiting
 
 ### Endpoints
 
@@ -47,12 +42,6 @@ description: 'Track all changes, updates, and new features added to the Exchange
 **Special:** TWI (Trade-Weighted Index), SDR (Special Drawing Rights)
 
 ## Bug Fixes
-
-### September 2025
-- Fixed React dashboard compatibility
-- Fixed CORS configuration 
-- Fixed rate limiting logic
-- Improved API key masking
 
 ### August 2025
 - Fixed DST timezone handling
