--- a/api-reference/public/convert-free.mdx
+++ b/api-reference/public/convert-free.mdx
@@ -17,7 +17,7 @@ The conversion endpoint allows you to convert between AUD and other supported cu
 ### Parameters
 
 <ParamField query="from" type="string" required>
-  Source currency code (must be "AUD" for free tier)
+  Source currency code (any supported currency)
 </ParamField>
 
 <ParamField query="to" type="string" required>
@@ -32,11 +32,15 @@ The conversion endpoint allows you to convert between AUD and other supported cu
 
 <CodeGroup>
 
-```bash cURL
+```bash cURL - AUD to USD
 curl "https://api.exchangeratesapi.com.au/convert?from=AUD&to=USD&amount=100"
 ```
 
-```javascript JavaScript
+```bash cURL - Cross Currency (USD to EUR)
+curl "https://api.exchangeratesapi.com.au/convert?from=USD&to=EUR&amount=100"
+```
+
+```javascript JavaScript - AUD to USD
 const from = 'AUD';
 const to = 'USD';
 const amount = 100;
@@ -50,6 +54,25 @@ const data = await response.json();
 if (data.success) {
   console.log(`${amount} ${from} = ${data.result} ${to}`);
   console.log(`Rate used: ${data.info.rate}`);
+} else {
+  console.error('Conversion failed:', data.error.info);
+}
+```
+
+```javascript JavaScript - Cross Currency
+const from = 'USD';
+const to = 'EUR';
+const amount = 100;
+
+const response = await fetch(
+  `https://api.exchangeratesapi.com.au/convert?from=${from}&to=${to}&amount=${amount}`
+);
+
+const data = await response.json();
+
+if (data.success) {
+  console.log(`${amount} ${from} = ${data.result} ${to}`);
+  console.log(`Cross rate: ${data.info.rate}`);
 } else {
   console.error('Conversion failed:', data.error.info);
 }
@@ -220,15 +243,18 @@ X-RateLimit-Reset: 2025-09-01T15:00:00Z
 
 ## Limitations
 
-### Base Currency Restriction
-Free conversions **must use AUD as the source currency**:
+### Cross-Currency Support
+Free conversions support **all currency pairs**:
 
 ```bash
-# ✅ Allowed
+# ✅ AUD to USD
 curl "https://api.exchangeratesapi.com.au/convert?from=AUD&to=USD&amount=100"
 
-# ❌ Not allowed - will return 400 error
+# ✅ USD to EUR (cross-currency conversion)
 curl "https://api.exchangeratesapi.com.au/convert?from=USD&to=EUR&amount=100"
+
+# ✅ GBP to JPY (cross-currency conversion)  
+curl "https://api.exchangeratesapi.com.au/convert?from=GBP&to=JPY&amount=100"
 ```
 
 ### TWI Restriction
@@ -257,18 +283,6 @@ Free conversions only use the latest available rates. Historical conversion requ
 }
 ```
 
-### Invalid Base Currency (400)
-
-```json
-{
-  "success": false,
-  "error": {
-    "code": 400, 
-    "type": "bad_request",
-    "info": "Only AUD is supported as base currency"
-  }
-}
-```
 
 ### TWI Conversion (400)
 
@@ -305,6 +319,19 @@ Free conversions only use the latest available rates. Historical conversion requ
     "code": 400,
     "type": "bad_request", 
     "info": "Missing required parameters: from, to, amount"
+  }
+}
+```
+
+### Method Not Allowed (405)
+
+```json
+{
+  "success": false,
+  "error": {
+    "code": 405,
+    "type": "method_not_allowed",
+    "info": "Method POST not allowed. Only GET, HEAD, and OPTIONS are supported."
   }
 }
 ```
