--- a/guides/rate-limits.mdx
+++ b/guides/rate-limits.mdx
@@ -15,12 +15,12 @@ All rate limits are calculated in **Australian Eastern Time (AEST/AEDT)** and re
 
 <Card title="Plan Tiers">
 
-| Plan | Price (AUD/month) | Daily Requests | Historical Data | Support |
-|------|-------------------|----------------|-----------------|---------|
-| **Free** | $0 | 50 | Latest only | Community |
-| **Starter** | $19 | 1,000 | 90 days | Email (48h) |
-| **Professional** | $79 | 10,000 | Full (2018+) | Email (24h) |
-| **Business** | $249 | Unlimited | Full + Premium | Phone (4h) |
+| Plan | Price (AUD/month) | Daily Requests | Historical Data | Max Range | Support |
+|------|-------------------|----------------|-----------------|-----------|---------|
+| **Free** | $0 | 50 | Last 7 days | 7 days | Community |
+| **Starter** | $19 | 1,000 | 90 days | 30 days | Email (48h) |
+| **Professional** | $79 | 10,000 | Full (2018+) | 90 days | Email (24h) |
+| **Business** | $249 | Unlimited | Full + Premium | 365 days | Phone (4h) |
 
 </Card>
 
@@ -34,7 +34,7 @@ The free tier is perfect for:
 
 **Limitations:**
 - 50 requests per day
-- Latest rates only (no historical data)
+- Last 7 days of historical data
 - Community support only
 - No SLA guarantees
 
