fixed docs about free plan

--- a/api-reference/authenticated/convert-authenticated.mdx
+++ b/api-reference/authenticated/convert-authenticated.mdx
@@ -371,7 +371,7 @@ This endpoint is subject to your plan's daily request limits:
 
 | Plan | Daily Requests | Historical Access | Rate Limiting |
 |------|----------------|-------------------|---------------|
-| Free | 50 | Latest rates only | No per-endpoint limits |
+| Free | 50 | Last 7 days | No per-endpoint limits |
 | Starter | 1,000 | Last 90 days | No per-endpoint limits |
 | Professional | 10,000 | Full history (2018+) | No per-endpoint limits |
 | Business | Unlimited | Full history (2018+) | No per-endpoint limits |
