--- a/sdks/curl.mdx
+++ b/sdks/curl.mdx
@@ -24,9 +24,9 @@ curl https://api.exchangeratesapi.com.au/status
 
 </CodeGroup>
 
-<Note>
+<Warning>
 The official cURL SDK/wrapper is coming soon! For now, use the native cURL examples below or create your own shell scripts.
-</Note>
+</Warning>
 
 ## Authentication
 
