--- a/sdks/javascript.mdx
+++ b/sdks/javascript.mdx
@@ -21,9 +21,9 @@ pnpm add @exchangeratesapi/javascript
 
 </CodeGroup>
 
-<Note>
+<Warning>
 The official JavaScript SDK is coming soon! For now, use the native fetch examples below or create your own wrapper class.
-</Note>
+</Warning>
 
 ## Quick Start
 
