--- a/sdks/php.mdx
+++ b/sdks/php.mdx
@@ -18,9 +18,9 @@ wget https://github.com/exchangeratesapi/php/releases/latest/download/exchange-r
 
 </CodeGroup>
 
-<Note>
+<Warning>
 The official PHP SDK is coming soon! For now, use the native cURL/Guzzle examples below or create your own wrapper class.
-</Note>
+</Warning>
 
 ## Quick Start
 
