--- a/sdks/python.mdx
+++ b/sdks/python.mdx
@@ -21,9 +21,9 @@ poetry add exchangeratesapi
 
 </CodeGroup>
 
-<Note>
+<Warning>
 The official Python SDK is coming soon! For now, use the native requests examples below or create your own wrapper class.
-</Note>
+</Warning>
 
 ## Quick Start
 
