--- a/support.mdx
+++ b/support.mdx
@@ -6,7 +6,7 @@ description: 'Get help with the Exchange Rates API - support channels, response 
 ## Support Channels
 
 ### Email Support
-**[support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au)**
+**https://www.exchangeratesapi.com.au/contact**
 
 **Response Times:**
 - **Free**: Best effort (2-5 business days)
@@ -18,7 +18,7 @@ description: 'Get help with the Exchange Rates API - support channels, response 
 ### Self-Service
 
 <CardGroup cols={2}>
-  <Card title="API Status" icon="wifi" href="https://status.exchangeratesapi.com.au">
+  <Card title="API Status" icon="wifi" href="https://exchangeratesapi-com-au.openstatus.dev/" target="_blank">
     Real-time API status
   </Card>
   <Card title="Dashboard" icon="chart-line" href="https://app.exchangeratesapi.com.au">
@@ -34,7 +34,7 @@ Include:
 - Request ID from X-Request-Id header
 - Sample cURL command (with key redacted)
 
-*Check [status page](https://status.exchangeratesapi.com.au) first, then email [support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au)*
+*Check [status page](https://exchangeratesapi-com-au.openstatus.dev/) first, then email us*
 
 ## Business Hours
 
