--- a/api-reference/authenticated/historical-date-currency.mdx
+++ b/api-reference/authenticated/historical-date-currency.mdx
@@ -211,7 +211,7 @@ This endpoint is subject to your plan's daily request limits:
 
 | Plan | Daily Requests | Historical Access |
 |------|----------------|-------------------|
-| Free | 50 | Latest rates only |
+| Free | 50 | Last 7 days |
 | Starter | 1,000 | Last 90 days |
 | Professional | 10,000 | Full history (2018+) |
 | Business | Unlimited | Full history (2018+) |
