--- a/guides/troubleshooting.mdx
+++ b/guides/troubleshooting.mdx
@@ -156,4 +156,4 @@ Include:
 - Request ID from `X-Request-Id` header
 - Sample cURL command (API key redacted)
 
-Email: [support@exchangeratesapi.com.au](mailto:support@exchangeratesapi.com.au)
+Contact us at https://www.exchangeratesapi.com.au/contact
