rolled out monthly instead of weekly

--- a/api-reference/public/convert-free.mdx
+++ b/api-reference/public/convert-free.mdx
@@ -346,7 +346,7 @@ For production use, unlimited conversions, and additional features:
     icon="key"
     href="/quickstart"
   >
-    Sign up for free and get 50 requests/day
+    Sign up for free and get 300 requests/month
   </Card>
   <Card
     title="View Plans"
