--- a/introduction.mdx
+++ b/introduction.mdx
@@ -39,7 +39,7 @@ The Exchange Rates API is a developer-friendly data service providing **official
     title="Free Tier"
     icon="gift"
   >
-    50 requests per day on the free plan, no credit card required
+    300 requests per month on the free plan, no credit card required
   </Card>
 </CardGroup>
 
