--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -9,7 +9,7 @@ description: 'Get up and running with the Exchange Rates API in under 2 minutes'
   <Step title="Sign Up">
     Visit [app.exchangeratesapi.com.au](https://app.exchangeratesapi.com.au) and sign up using your email address.
     
-    <Note>No credit card required for the free tier (50 requests/day)</Note>
+    <Note>No credit card required for the free tier (300 requests/month)</Note>
   </Step>
   
   <Step title="Verify Your Email">
